# Drone_game_part2

./: CMakeLists.txt  Game_Config.json  README.md  run.sh
BlackBoardServer/: BlackBoardServer.c  CMakeLists.txt  server_functions.c  server_functions.h
DroneDynamicsManager/: CMakeLists.txt  DroneDynamicsManager.c  Dynamics_functions.c  Dynamics_functions.h
GameWindow/: CMakeLists.txt  GameWindow.c  Window.c  Window.h
KeyboardManager/: CMakeLists.txt  KeyBoard.c  KeyBoard.h  KeyboardManager.c
Obstacle_Generator/: CMakeLists.txt  Generator_functions.c  Generator_functions.h  Obstacle_Generator.c
Obstacle_Generator/Obstacles/: CMakeLists.txt
Obstacles_publisher_subscriber/: CMakeLists.txt  ObstaclesPubSubTypes.hpp  ObstaclesPublisherApp.cxx  ObstaclesPublisherApp.hpp  ObstaclesSubscriberApp.cxx  ObstaclesSubscriberApp.hpp  Obstaclesmain.cxx  gg.h
Targets_Generator/: CMakeLists.txt  Generator_functions.c  Generator_functions.h  Targets_Generator.c
Targets_publisher/: CMakeLists.txt  Generator_functions.h  TargetsPublisherApp.cxx  TargetsPublisherApp.hpp  TargetsSubscriberApp.hpp  Targetsmain.cxx
Targets_publisher_subscriber/: CMakeLists.txt  Generator_functions.h  TargetsPublisherApp.cxx  TargetsPublisherApp.hpp  TargetsSubscriberApp.cxx  Targetsmain.cxx
WatchDog/: CMakeLists.txt  WatchDog.c
common_files/: logger.c  logger.h  shared.c  shared.h  sig_handle.c  sig_handle.h
